# eml2pdf

./: CHANGELOG.md  DEVELOPMENT.md  INSTALL.md  Makefile  README.html  README.md  SECURITY.md  api.html  development.html  documentation.html  eml-to-pdf.py  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  security.html
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/eml2pdf/: libeml2pdf.html  security.html
_sources/: README.md.txt  development.rst.txt  index.rst.txt  install.rst.txt
doc/: eml_parsing.md
docs/: api.rst  conf.py
eml2pdf/: __init__.py  eml2pdf.py  libeml2pdf.py  security.py
eml_to_pdf/: eml_to_pdf.py
scripts/: check_debian_deps.py  generate_test_emls.py
stubs/weasyprint/: __init__.pyi
tests/: common.py  generate_test_emls.py  test_cli.py  test_encodings.py  test_exclusive_files.py  test_libeml2pdf.py  test_security.py
tests/test_data/: doc1.odt  email_with_doc_attachment.eml  open document 2.odt  plain_and_html_inline.eml  plain_and_html_inline.html  plain_native_utf8.eml  plain_native_utf8.html  simple_plain_and_html_embedded_img.eml  test_shift-js.eml  train_ticket.eml
