[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "eml_to_pdf"
description = "Convert .eml (email) files to PDF using Python."
readme = 'README.md'
keywords = ["eml", "pdf", "pdf-converter", "weasyprint", "html", "mime", "multipart"]
authors = [
    {name = "Pieter Lenaerts", email = "pieter.aj.lenaerts@gmail.com"},
    {name = "Daniel Grossfeld", email = "github@klokie.com"},
]
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "weasyprint~=63.0",
    "markdown~=3.7",
    "hurry.filesize~=0.9",
    "beautifulsoup4~=4.12"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/plenaerts/eml_to_pdf"
Repository = "https://github.com/plenaerts/eml_to_pdf"
Issues = "https://github.com/plenaerts/eml_to_pdf/issues"

[project.scripts]
eml_to_pdf = "eml_to_pdf.eml_to_pdf:main"

[tool.setuptools]
packages = ["eml_to_pdf"]
include-package-data = false

[tool.setuptools_scm]
